@@ -3,10 +3,10 @@ package io.daobab.target.buffer.single.function;
 public class FunctionTypeConverter {
 
     public Long toLong(String value) {
-        return value == null ? null : new Long(value);
+        return value == null ? null : Long.valueOf(value);
     }
 
     public Integer toInteger(String value) {
-        return value == null ? null : new Integer(value);
+        return value == null ? null : Integer.valueOf(value);
     }
 }
